--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 
@@ -14,14 +15,14 @@ a {
     text-decoration: none;
     float: left;
     color: rgb(64,128,155);
-    margin-top: .4rem;
+    margin-top: .5rem;
 }
 
 h4 {
     text-decoration: solid;
     font-family: cursive;
     font-weight: 900;
-    margin: .4rem 0;
+    margin: 0.2rem 2.5rem .5rem 0;
 }
 
 header h1 {
@@ -45,9 +46,10 @@ header {
 }
 
 .row .column img {
-    width: 50%;
+    width: 30%;
+    height: 30%;
     color: white;
-    margin: 0 .4rem 0 0;
+    margin: 0 2rem 0 0;
 }
 
 .row .column {
@@ -57,7 +59,7 @@ header {
 }
 
 .mid {
-    margin: 0 2rem;
+    margin: 0 3rem;
 }
 
 .column > * {
@@ -75,19 +77,3 @@ header {
 .last {
     margin-top: 1.5rem;
 }
-
-/*
-  .row .col:nth-child(1) {
-    background-color: yellow;
-  }
-  
-  .row .col:nth-child(2) {
-    background-color: orange;
-
-    [class*="float-"] {
-    width: 100px;
-    height: 100px;
-    background-color: red;
-    display: inline-block;
-}
-  }*/
